--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -884,6 +884,8 @@ GHC_STAGE1 	= $(GHC_COMPILER_DIR)/stage1/ghc-inplace -no-user-package-conf
 GHC_STAGE2 	= $(GHC_COMPILER_DIR)/stage2/ghc-inplace -no-user-package-conf
 GHC_STAGE3 	= $(GHC_COMPILER_DIR)/stage3/ghc-inplace -no-user-package-conf
 
+BOOTSTRAPPING_CONF = $(FPTOOLS_TOP_ABS)/libraries/bootstrapping.conf
+
 # NOTE: add -no-user-package-conf for stage 1-3 above, so that
 # we avoid picking up any packages the user might happen to have
 # installed for this GHC version.  They are bound to be incompatible
@@ -912,6 +914,8 @@ else # not UseStage1 or BootingFromHc
 
 HC	        = @WithHc@
 MKDEPENDHS	= $(GHC)
+BOOTSTRAPPING_PACKAGE_CONF_HC_OPTS = -package-conf $(BOOTSTRAPPING_CONF)
+BOOTSTRAPPING_PACKAGE_CONF_MKDEPENDHS_OPTS = -package-conf $(BOOTSTRAPPING_CONF)
 GhcVersion	= @GhcVersion@
 GhcPatchLevel	= @GhcPatchLevel@
 GhcMajVersion	= @GhcMajVersion@
