--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -764,7 +764,7 @@ GHC_UNLIT_DIR    	= $(FPTOOLS_TOP)/$(GHC_UNLIT_DIR_REL)
 GHC_HP2PS_DIR		= $(FPTOOLS_TOP)/$(GHC_HP2PS_DIR_REL)
 GHC_HSTAGS_DIR		= $(FPTOOLS_TOP)/$(GHC_HSTAGS_DIR_REL)
 GHC_GHCTAGS_DIR		= $(FPTOOLS_TOP)/$(GHC_GHCTAGS_DIR_REL)
-GHC_HSC2HS_DIR		= $(FPTOOLS_TOP)/$(GHC_HSC2HS_DIR_REL)
+GHC_HSC2HS_DIR		= $(FPTOOLS_TOP_ABS)/$(GHC_HSC2HS_DIR_REL)
 GHC_TOUCHY_DIR		= $(FPTOOLS_TOP)/$(GHC_TOUCHY_DIR_REL)
 GHC_PKG_DIR		= $(FPTOOLS_TOP)/$(GHC_PKG_DIR_REL)
 GHC_GENPRIMOP_DIR	= $(FPTOOLS_TOP)/$(GHC_GENPRIMOP_DIR_REL)
@@ -812,7 +812,7 @@ GHC_UNLIT_PGM		= unlit$(exeext)
 GHC_HP2PS_PGM		= hp2ps
 GHC_HSTAGS_PGM		= hasktags
 GHC_GHCTAGS_INPLACE_PGM	= ghctags-inplace
-GHC_HSC2HS_INPLACE_PGM	= hsc2hs-inplace
+GHC_HSC2HS_INPLACE_PGM	= hsc2hs
 GHC_TOUCHY_PGM		= touchy$(exeext)
 GHC_MANGLER_PGM		= ghc-asm
 GHC_SPLIT_PGM		= ghc-split
@@ -838,7 +838,7 @@ UNLIT			= $(GHC_UNLIT_DIR)/$(GHC_UNLIT_PGM)
 HP2PS			= $(GHC_HP2PS_DIR)/$(GHC_HP2PS_PGM)
 HSTAGS			= $(GHC_HSTAGS_DIR)/$(GHC_HSTAGS_PGM)
 GHCTAGS_INPLACE		= $(GHC_GHCTAGS_DIR)/$(GHC_GHCTAGS_INPLACE_PGM)
-HSC2HS_INPLACE		= $(GHC_HSC2HS_DIR)/$(GHC_HSC2HS_INPLACE_PGM)
+HSC2HS_INPLACE		= $(GHC_HSC2HS_DIR)/install-inplace/bin/$(GHC_HSC2HS_INPLACE_PGM)
 MANGLER			= $(GHC_MANGLER_DIR)/$(GHC_MANGLER_PGM)
 SPLIT			= $(GHC_SPLIT_DIR)/$(GHC_SPLIT_PGM)
 SYSMAN 			= $(GHC_SYSMAN_DIR)/$(GHC_SYSMAN_PGM)
@@ -962,6 +962,22 @@ SRC_CC_OPTS = @SRC_CC_OPTS@
 ifeq "$(TARGETPLATFORM)" "ia64-unknown-linux"
 SRC_CC_OPTS += -G0
 endif
+
+SRC_HSC2HS_OPTS += $(addprefix --cflag=,$(filter-out -O,$(SRC_CC_OPTS)))
+SRC_HSC2HS_OPTS += --cc=$(CC)
+SRC_HSC2HS_OPTS += --ld=$(CC)
+SRC_HSC2HS_OPTS += --cflag=-D__GLASGOW_HASKELL__=$(ProjectVersionInt)
+SRC_HSC2HS_OPTS += --lflag=-no-link-haskell98
+SRC_HSC2HS_OPTS += -I$(GHC_INCLUDE_DIR_ABS)
+SRC_HSC2HS_OPTS += -I$(FPTOOLS_TOP_ABS)/gmp/gmpbuild
+
+# Given
+#   foo bar
+# make
+#   :\"-Ifoo\":\"-Ibar\"
+nothing=
+space=$(nothing) $(nothing)
+SRC_HSC2HS_OPTS += $(subst $(space),,$(foreach d,$(GMP_INCLUDE_DIRS),:\"-I$(d)\"))
 
 #-----------------------------------------------------------------------------
 # GMP Library (version 2.0.x or above)
